k8s/05-frontend.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: frontend
  namespace: campuskart
  labels: {app: frontend, tier: frontend, app.kubernetes.io/part-of: campuskart}
spec:
  replicas: 1
  selector:
    matchLabels: {app: frontend}
  template:
    metadata:
      labels: {app: frontend, tier: frontend}
    spec:
      containers:
        - name: frontend
          image: campuskart-frontend:1.0
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 80
          readinessProbe:
            httpGet: {path: /, port: 80}
            periodSeconds: 5
          livenessProbe:
            httpGet: {path: /, port: 80}
            initialDelaySeconds: 10
            periodSeconds: 10
          resources:
            requests: {cpu: 10m, memory: 16Mi}
            limits: {cpu: 100m, memory: 64Mi}
---
apiVersion: v1
kind: Service
metadata:
  name: frontend
  namespace: campuskart
spec:
  selector: {app: frontend}
  ports:
    - {port: 80, targetPort: 80}
